[package]
name = "my-surf-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.3.2"
http-client = "6.5.3"
isahc = "0.9.14"
async-std = {version = "1.12.0", features = ["attributes"]}
http-types = "2.12.0"
femme = "2.2.1"
opentelemetry = { version = "0.18.0", features = ["rt-async-std"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-async-std"] }
opentelemetry-surf = "0.6"
opentelemetry-semantic-conventions = "0.10.0"